# Obstacle-Detection

./: README.md
installations/python_data/generate/: 1.onnx  2.onnx  3.onnx  4.onnx  5.onnx
installations/python_data/trt/: 1_mini.trt  2_mini.trt  3_mini.trt  4_mini.trt  5_mini.trt
src/actuator_models/: CMakeLists.txt  README.md  make_deb  package.xml
src/actuator_models/cfg/: motorModel.cfg
src/actuator_models/include/nowtech_actuator_models/: gazebo_ros_dc_motor.h  gazebo_ros_light.h  gazebo_ros_simple_servo.h
src/actuator_models/launch/: simulation.launch
src/actuator_models/meshes/: kindle.stl  monitor.stl
src/actuator_models/params/: dc_motor.yaml
src/actuator_models/src/: gazebo_ros_dc_motor.cpp  gazebo_ros_light.cpp  gazebo_ros_motor.cpp  gazebo_ros_simple_servo.cpp  gazebo_ros_template.cpp
src/actuator_models/xacro/: actuator.xacro  light.xacro  motor.xacro  screen.xacro  test.xacro
src/balder_f290/: CMakeLists.txt  package.xml
src/balder_f290/launch/: description.launch  simulation.launch
src/balder_f290/params/: wheelchair.yaml
src/balder_f290/params/model/: actuator.yaml  arm_rest.yaml  dc_motor.yaml  diff_base.yaml  head_rest.yaml  leg_rest.yaml  seating.yaml
src/balder_f290/xacro/: wheelchair.xacro
src/gazebo_ros_pal/: CMakeLists.txt  package.xml  readme  urdf.rviz
src/gazebo_ros_pal/cfg/: GazeboRosOpenniKinect.cfg
src/gazebo_ros_pal/launch/: depth_to_laser.launch  display.launch  gazebo.launch  rviz.launch
src/gazebo_ros_pal/params/: depth_to_laser.yaml
src/gazebo_ros_pal/src/: gazebo_ros_openni_kinect.cpp
src/gazebo_ros_pal/urdf/: pal.csv  pal.urdf
src/gazebo_ros_pal/xacro/: depth.xacro  laser.xacro  pal.xacro
src/wheelchair_model/: CMakeLists.txt  package.xml
src/wheelchair_model/launch/: description.launch  simulation.launch
src/wheelchair_model/params/: ackermann_base.yaml  dc_motor.yaml  diff_base.yaml  diff_drive.yaml  diff_wheel_odom.yaml  leg_rest.yaml  lights.yaml  mecanum_wheel.yaml  omni_wheel.yaml  ros_effort.yaml  ros_position.yaml  seating.yaml  skid_base.yaml  wheelchair.yaml
src/wheelchair_model/xacro/: ackermann_base.xacro  arm_rest.xacro  caster_wheel.xacro  differential_base.xacro  head_rest.xacro  leg_rest.xacro  lights.xacro  materials.xacro  math.xacro  mecanum_wheel.xacro  model.xacro  odometry.xacro  omni_wheel.xacro  rubber_wheel.xacro  seating.xacro  skid_base.xacro  wheelchair.xacro  xactuator.xacro
