<package format="2">
  <name>gazebo_ros_pal</name>
  <version>1.0.0</version>
  <description>
    <p>Pal camera simulation plugin and URDF model for Gazebo</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_dev</build_depend>

  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_srvs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>nodelet</depend>
  <depend>angles</depend>
  <depend>nav_msgs</depend>
  <depend>urdf</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>rosgraph_msgs</depend>
  <depend>image_transport</depend>
  <depend>rosconsole</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>cv_bridge</depend>
  <depend>polled_camera</depend>
  <depend>diagnostic_updater</depend>
  <depend>camera_info_manager</depend>
  <depend>std_msgs</depend>
</package>
