<?xml version="1.0"?>
<package format="2">
  <name>nowtech_wheelchair_model</name>
  <version>1.3.2</version>
  <description>Now Technologies General Wheelchair Model</description>
  <maintainer email="marton@nowtech.hu">nils</maintainer>
  <license>NO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
